@@ -3,6 +3,7 @@ Changelog for easyComm.
 1.2.8-pl
 ==============
 - Отключена перезапись чанков в скрипте установки
+- Добавлен параметр resourceFields в сниппет ecMessages
 
 1.2.7-pl
 ==============
